--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <title>Encantos literários</title>
 </head>
 <body>
-  
+  <div id="app">
+    <header>
+      <img src="./assets/logo-symbol.svg" class="only-mobile" alt="Logo Encantos literários" />
+      <img src="./assets/icons/logo-horizontal.svg" class="only-desktop" alt="Logo Encantos literários" />
+      <button class="btn btn-primary" aria-label="Assinar"></button>
+    </header>
+  </div>
 </body>
 </html>
