Adicionar hero section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
       <img src="./assets/icons/logo-horizontal.svg" class="only-desktop" alt="Logo Encantos literários" />
       <button class="btn btn-primary" aria-label="Assinar"></button>
     </header>
+
+    <section id="hero">
+      <img src="./assets/images/hero-background.png" class="hero-background" alt="Imagem de fundo" />
+
+      <div>
+        <h1>Desperte a sua imaginação e explore novos mundos</h1>
+        <p>
+          Junte-se ao clube de assinatura Encantos Literários e descubra 
+          maravilhas e aventuras a cada página 
+        </p>
+      </div>
+    </section>
   </div>
 </body>
 </html>
