--- a/index.html
+++ b/index.html
@@ -29,6 +29,27 @@
         </p>
       </div>
     </section>
+
+    <section id="book">
+      <h2>Receba todo mês um 
+        <span>
+          <img src="./assets/images/mystery-opened-spellbook.png" alt="Imagem de um livro aberto" />
+          livro surpresa
+        </span>
+         
+        do seu tema favorito, acompanhado de <br>
+        <span>
+          <img src="./assets/images/mystery-ouija-planchette.png" alt="Imagem de uma planchette" />
+          brindes exclusivos
+        </span> 
+
+        que tornarão a sua experiência literária 
+        <span>
+          <img src="./assets/images/mystery-crystal-ball.png" alt="Imagem de uma bola de cristal" />
+          encantadora
+        </span>
+      </h2>
+    </section>
   </div>
 </body>
 </html>
