Adicionar monthly-kit section

--- a/index.html
+++ b/index.html
@@ -50,6 +50,31 @@
         </span>
       </h2>
     </section>
+
+    <section id="monthly-kit">
+      <header>
+        <div>
+          <img src="./assets/icons/star.svg" alt="Icone de estrela" />
+          <h2>Conheça o kit mensal</h2>
+          <img src="./assets/icons/star.svg" alt="Icone de estrela" />
+        </div>
+        <p>Recebe uma caixa surpresa todos os meses</p>
+      </header>
+
+      <main>
+        <div class="book">
+          <img src="./assets/images/book.png" alt="Imagem de um livro" />
+          <div class="back-book">
+            <img src="./assets/images/bookmark-purple.png" alt="Imagem de um bookmark" />
+            <img src="./assets/images/bookmark-yellow.png" alt="Imagem de um bookmark" />
+            <img src="./assets/icons/pin-description.svg" alt="Icone de pin" />
+            <img src="./assets/icons/book-description.svg" alt="Icone de livro" />
+            <img src="./assets/icons/bookmark-description.svg" alt="Icone de bookmark" />
+            <img src="./assets/images/pin.png" alt="Imagem de um pin" />
+          </div>
+        </div>
+      </main>
+    </section>
   </div>
 </body>
 </html>
